merubah judul dan mengganti image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Azhis Airconditioner</title>
+    <title>Mandiri Tehnik AC Medan</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/" />
 
@@ -72,26 +72,26 @@
         <header class="mb-auto">
           <div>
             <h3 class="float-md-start mb-0 text-logo">
-              <strong>AZHIS<i class="text-i"> AIRCONDITIONER.</i></strong>
+              <strong>MANDIRI TEHNIK<i class="text-i"> AC.</i></strong>
             </h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
               <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
               <a class="nav-link fw-bold py-1 px-0 active" href="#pelayanan">Pelayanan</a>
-              <a class="nav-link fw-bold py-1 px-0 active" href="https://wa.me/+628816123606">Kontak</a>
+              <a class="nav-link fw-bold py-1 px-0 active" href="https://wa.me/+6282362545468">Kontak</a>
             </nav>
           </div>
         </header>
 
         <main class="px-3">
           <img src="img/1.jpg" alt="" class="mt-5 img-fluid" />
-          <h1 class="mt-3">Mengapa harus memilih AZHIS AIRCONDITIONER ?</h1>
+          <h1 class="mt-3">Mengapa harus memilih MANDIRI TEHNIK AC MEDAN ?</h1>
           <p class="lead">
-            Kami <strong class="deskripsi"><i>AZHIS AIRCONDITIONER</i></strong> adalah teknisi profesional dan berpengalaman dalam menangani berbagai masalah kerusakan berbagai jenis ac di rumah ataupun diperusahaan. Dan kami telah
-            menangani pekerjaan di berbagai tempat seluruh wilayah <strong class="fw-bold">JAKARTA dan sekitarnya</strong> dan kami siap melayani dikota-kota lainnya.
+            Kami <strong class="deskripsi"><i>MANDIRI TEHNIK AC MEDAN</i></strong> adalah teknisi profesional dan berpengalaman dalam menangani berbagai masalah kerusakan berbagai jenis ac di rumah ataupun diperusahaan. Dan kami telah
+            menangani pekerjaan di berbagai tempat seluruh wilayah <strong class="fw-bold">Medan dan sekitarnya</strong> dan kami siap melayani dikota-kota lainnya.
           </p>
           <br />
           <p class="lead">
-            <a href="https://wa.me/+628816123606" class="btn btn-lg btn-secondary fw-bold border-success border-2 shadow bg-success text-white">Whatsapp</a>
+            <a href="https://wa.me/+6282362545468" class="btn btn-lg btn-secondary fw-bold border-success border-2 shadow bg-success text-white">Whatsapp</a>
           </p>
         </main>
       </div>
@@ -157,8 +157,8 @@
           <div class="py-5 text-center container-fluid">
             <div class="row py-lg-5">
               <div class="col-lg-6 col-md-8 mx-auto">
-                <h1>AZHIS AIRCONDITIONER Galery :</h1>
-                <p>AZHIS AIRCONDITIONER telah melayani pekerjaan di berbagai tempat seperti : perumahan, perkantoran, gedung bertingkat, pabrik, yayasan, PT, ruko, masjid dll</p>
+                <h1>MANDIRI TEHNIK AC MEDAN Galery :</h1>
+                <p>Kami telah melayani pekerjaan di berbagai tempat seperti : perumahan, perkantoran, gedung bertingkat, pabrik, yayasan, PT, ruko, masjid dll</p>
                 <br />
                 <p><strong>MELAYANI :</strong></p>
                 <p>Cuci, Isi Freon, Bongkar/Pasang, Service, Jual/Beli ac scond, Frezzer Box, Mesin Cuci, Kulkas, dll</p>
@@ -319,15 +319,15 @@
         <div class="container-contact">
           <h3>Alamat :</h3>
           <br />
-          <p>Jl. Gotong Royong Rt.007 Rw.08</p>
-          <p>Kapuk, Cengkareng Jakarta Barat</p>
-          <p>Telpon : <a href="https://wa.me/+628816123606" class="text-decoration-none">0881 6123 606</a></p>
+          <p>Tj. Gusta, Kec. Medan Helvetia</p>
+          <p>Medan, Sumatra Utara</p>
+          <p>Telpon : <a href="https://wa.me/+6282362545468" class="text-decoration-none">0823 6254 5468</a></p>
         </div>
 
         <div class="container-map mt-5">
           <div class="map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.926059941997!2d106.74651107443977!3d-6.14063496019736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f7def781f443%3A0xb29d1fc1bd23b86a!2sJl.%20Gotong%20Royong%2C%20RT.7%2FRW.8%2C%20Kapuk%2C%20Kecamatan%20Cengkareng%2C%20Kota%20Jakarta%20Barat%2C%20Daerah%20Khusus%20Ibukota%20Jakarta!5e0!3m2!1sid!2sid!4v1700723508529!5m2!1sid!2sid"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15927.580797668064!2d98.60333973789201!3d3.61144585702806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30312e87d3f92963%3A0xa328b1fb53b5d0d9!2sTj.%20Gusta%2C%20Kec.%20Medan%20Helvetia%2C%20Kota%20Medan%2C%20Sumatera%20Utara!5e0!3m2!1sid!2sid!4v1703469447940!5m2!1sid!2sid"
               width="600"
               height="450"
               style="border: 0"
@@ -343,7 +343,7 @@
       <footer class="text-muted py-5">
         <div class="container">
           <p>
-            Dibuat oleh : <strong><i>Azhis Airconditioner</i></strong> | &copy; 2023
+            Dibuat oleh : <strong><i>Mandiri Tehnik AC Medan</i></strong> | &copy; 2023
           </p>
           <p>
             <a href="#">Back to top</a>
